WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30833
Chromium builds should not use JavaScriptCore/wtf/CurrentTime.cpp
https://bugs.webkit.org/show_bug.cgi?id=30833
Summary
Chromium builds should not use JavaScriptCore/wtf/CurrentTime.cpp
James Robinson
Reported
2009-10-27 13:55:55 PDT
Chromium uses a different method to calculate the current time than is used in JavaScriptCore/wtf/CurrentTime.cpp. This can lead to time skew when calls to currentTime() and Chromium's time function are mixed. In particular, timers can get scheduled in the past which leads to 100% CPU use. See
http://code.google.com/p/chromium/issues/detail?id=25892
for an example. Chromium provides its own implementation of WTF::currentTime() which it should always use instead.
Attachments
Patch that excludes wtf/CurrentTime.cpp from the Chromium build
(2.00 KB, patch)
2009-10-27 14:15 PDT
,
James Robinson
fishd
: review+
fishd
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2009-10-27 14:15:03 PDT
Created
attachment 41985
[details]
Patch that excludes wtf/CurrentTime.cpp from the Chromium build Here's a fix - it adds an exclusion for wtf/CurrentTime.cpp in JavaScriptCore.gyp and adds a #error to ensure that the file isn't accidentally linked into a Chromium build.
Darin Fisher (:fishd, Google)
Comment 2
2009-10-27 14:52:26 PDT
Landed as
http://trac.webkit.org/changeset/50173
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug